tests/ui/break_outside_loop.stderr
Error [E0115]: `break` only works inside a loop
  --> tests/ui/break_outside_loop.jet:2:5
    |
  2 |     break;
    |     ^^^^^
 Why: `break` and `continue` steer the nearest `while` or `for` loop
 Fix: move this inside a loop, or remove it
